AWS RDS Integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-cloud.aws.credentials.profile-name=
-cloud.aws.region.auto=
-cloud.aws.region.static=
-cloud.aws.rds.instances[0].db-instance-identifier=
-cloud.aws.rds.instances[0].username=
-cloud.aws.rds.instances[0].password=
-cloud.aws.rds.instances[0].databaseName=
+cloud.aws.credentials.profile-name=rdsdemo
+cloud.aws.region.auto=false
+cloud.aws.region.static=us-east-1
+cloud.aws.rds.instances[0].db-instance-identifier=database-1
+cloud.aws.rds.instances[0].username=admin
+cloud.aws.rds.instances[0].password=password
+cloud.aws.rds.instances[0].databaseName=demo
 
 
